--- a/index.html
+++ b/index.html
@@ -698,19 +698,17 @@
             />
           </div>
           <div class="image-upload">
-            <input
-              type="file"
-              id="wordImage"
-              accept="image/*"
-              style="display: none"
-              onchange="vocabularyManager.handleImageUpload(event)"
-            />
-            <button
-              class="image-btn"
-              onclick="document.getElementById('wordImage').click()"
-            >
-              <i class="fas fa-image"></i> Add Image
-            </button>
+            <label for="wordImage" class="image-upload-label">
+              <i class="fas fa-image"></i>
+              <span>Add Image</span>
+              <input
+                type="file"
+                id="wordImage"
+                accept="image/*"
+                capture="environment"
+                style="display: none"
+              />
+            </label>
             <div id="imagePreview" class="image-preview"></div>
           </div>
           <div class="action-buttons">
@@ -1042,14 +1040,80 @@
         }
         handleImageUpload(event) {
           const file = event.target.files[0];
-          if (file && file.type.startsWith("image/")) {
-            const reader = new FileReader();
-            reader.onload = (e) => {
-              this.currentImage = e.target.result;
-              this.updateImagePreview();
-            };
-            reader.readAsDataURL(file);
+          if (!file) return;
+
+          // Kiểm tra kích thước file (giới hạn 5MB)
+          if (file.size > 5 * 1024 * 1024) {
+            this.showNotification("File size should be less than 5MB", "error");
+            return;
           }
+
+          // Kiểm tra loại file
+          if (!file.type.startsWith("image/")) {
+            this.showNotification("Please select an image file", "error");
+            return;
+          }
+
+          const reader = new FileReader();
+
+          reader.onload = (e) => {
+            try {
+              // Tạo image object để kiểm tra kích thước
+              const img = new Image();
+              img.onload = () => {
+                // Resize ảnh nếu cần
+                const maxWidth = 800;
+                const maxHeight = 800;
+
+                let width = img.width;
+                let height = img.height;
+
+                if (width > maxWidth || height > maxHeight) {
+                  if (width > height) {
+                    height *= maxWidth / width;
+                    width = maxWidth;
+                  } else {
+                    width *= maxHeight / height;
+                    height = maxHeight;
+                  }
+                }
+
+                // Tạo canvas để resize
+                const canvas = document.createElement("canvas");
+                canvas.width = width;
+                canvas.height = height;
+
+                const ctx = canvas.getContext("2d");
+                ctx.drawImage(img, 0, 0, width, height);
+
+                // Chuyển canvas thành base64
+                const resizedImage = canvas.toDataURL(file.type, 0.8);
+
+                // Hiển thị preview
+                const imagePreview = document.getElementById("imagePreview");
+                imagePreview.innerHTML = `<img src="${resizedImage}" alt="Preview">`;
+
+                // Lưu ảnh đã resize
+                this.currentImage = resizedImage;
+              };
+
+              img.src = e.target.result;
+            } catch (error) {
+              console.error("Error processing image:", error);
+              this.showNotification("Error processing image", "error");
+            }
+          };
+
+          reader.onerror = (error) => {
+            console.error("Error reading file:", error);
+            this.showNotification("Error reading file", "error");
+          };
+
+          // Đọc file
+          reader.readAsDataURL(file);
+
+          // Reset input để có thể chọn lại cùng một file
+          event.target.value = "";
         }
 
         updateImagePreview() {
